--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "winston": "^3.1.0"
     },
     "devDependencies": {
+        "@types/express": "^4.16.0",
         "@types/node": "^10.12.18",
         "browser-sync": "^2.26.3",
         "cpx": "^1.5.0",
