--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
     "name": "scoala21",
     "version": "1.0.0",
-    "description": "test3",
+    "description": "Scoala Gimnaziala nr. 21 'Vicentiu Babes', Timisoara - site-ul scolii",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/lmaran/scoala21.git"
+    },
     "main": "app.js",
     "scripts": {
         "start": "run-s build watch",
