--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "cycle": "^1.0.3",
         "express": "^4.16.4",
         "express-handlebars": "^3.0.0",
+        "marked": "^0.6.0",
         "mongodb": "^3.1.10",
         "rollbar": "^2.5.1",
         "winston": "^3.1.0"
