move compiled files in dist folder one level up

--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
         "build-tsc": "tsc -p tsconfig.dev.json",
         "build-tsc-prod": "tsc -p tsconfig.prod.json",
         "copy": "run-p copy-*",
-        "copy-files": "cpx \"src/**/*.{json,js,hbs}\" dist/src",
-        "copy-pub": "cpx \"src/public/**/*.*\" dist/src/public",
+        "copy-files": "cpx \"src/**/*.{json,js,hbs}\" dist",
+        "copy-pub": "cpx \"src/public/**/*.*\" dist/public",
         "watch": "run-p watch-*",
         "watch-tsc": "tsc -p tsconfig.dev.json --watch",
-        "watch-files": "cpx \"src/**/*.{json,js,hbs}\" dist/src --watch --no-initial --verbose",
-        "watch-pub": "cpx \"src/public/**/*.*\" dist/src/public --watch --no-initial --verbose",
+        "watch-files": "cpx \"src/**/*.{json,js,hbs}\" dist --watch --no-initial --verbose",
+        "watch-pub": "cpx \"src/public/**/*.*\" dist/public --watch --no-initial --verbose",
         "watch-dist": "nodemon --config nodemon.json",
         "lint": "tslint 'src/**/*.ts' -c tslint.json --format stylish --force",
         "clean": "rimraf dist"
