--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "strict": true,
         "module": "commonjs",
         "target": "es6",
-        "outDir": "./dist/src",
+        "outDir": "./dist",
         "removeComments": true
     },
     "include": ["./src/**/*"],
