--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
         "express-handlebars": "^3.0.0",
         "marked": "^0.6.0",
         "mongodb": "^3.1.10",
+        "pdfjs-dist": "^2.0.943",
         "rollbar": "^2.5.1",
         "winston": "^3.1.0"
     },
