--- a/server/package.json
+++ b/server/package.json
@@ -20,13 +20,25 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "async": "^2.6.2",
+        "composable-middleware": "^0.3.0",
+        "cookie": "^0.3.1",
+        "crypto": "^1.0.1",
         "cycle": "^1.0.3",
         "express": "^4.16.4",
         "express-handlebars": "^3.0.0",
+        "express-jwt": "^5.3.1",
+        "jsonwebtoken": "^8.5.1",
+        "mailgun-js": "^0.22.0",
         "marked": "^0.6.0",
         "mongodb": "^3.1.10",
+        "node-uuid": "^1.4.8",
+        "nodemailer": "^6.1.0",
+        "passport": "^0.4.0",
+        "passport-local": "^1.0.0",
         "pdfjs-dist": "^2.0.943",
         "rollbar": "^2.5.1",
+        "validator": "^10.11.0",
         "winston": "^3.1.0"
     },
     "devDependencies": {
