--- a/server/package.json
+++ b/server/package.json
@@ -21,8 +21,10 @@
     "license": "ISC",
     "dependencies": {
         "async": "^2.6.2",
+        "body-parser": "^1.18.3",
         "composable-middleware": "^0.3.0",
         "cookie": "^0.3.1",
+        "cookie-parser": "^1.4.4",
         "crypto": "^1.0.1",
         "cycle": "^1.0.3",
         "express": "^4.16.4",
