--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "express-handlebars": "^3.0.0",
         "express-jwt": "^5.3.1",
         "jsonwebtoken": "^8.5.1",
+        "lit-html": "^1.1.0",
         "mailgun-js": "^0.22.0",
         "marked": "^0.6.0",
         "mongodb": "^3.1.10",
