--- a/package.json
+++ b/package.json
@@ -37,22 +37,18 @@
         "nodemailer": "^6.1.0",
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
-        "pdfjs-dist": "^2.0.943",
         "rollbar": "^2.5.1",
         "uuid": "^3.3.2",
         "validator": "^10.11.0",
         "winston": "^3.1.0"
     },
     "devDependencies": {
-        "@types/express": "^4.16.0",
-        "@types/node": "^10.12.18",
         "browser-sync": "^2.26.3",
         "cpx": "^1.5.0",
         "eslint": "^5.12.1",
         "nodemon": "^1.18.9",
         "npm-run-all": "^4.1.5",
         "prettier": "^1.15.3",
-        "rimraf": "^2.6.2",
-        "typescript": "^3.2.2"
+        "rimraf": "^2.6.2"
     }
 }
