--- a/package.json
+++ b/package.json
@@ -20,19 +20,18 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "async": "^2.6.2",
+        "bcrypt": "^3.0.6",
         "body-parser": "^1.18.3",
         "composable-middleware": "^0.3.0",
         "cookie": "^0.3.1",
         "cookie-parser": "^1.4.4",
-        "cycle": "^1.0.3",
         "express": "^4.16.4",
         "express-handlebars": "^3.0.0",
         "express-jwt": "^5.3.1",
         "jsonwebtoken": "^8.5.1",
         "lit-html": "^1.1.0",
         "mailgun-js": "^0.22.0",
-        "marked": "^0.6.0",
+        "marked": "^0.7.0",
         "mongodb": "^3.1.10",
         "nodemailer": "^6.1.0",
         "passport": "^0.4.0",
@@ -43,7 +42,7 @@
         "winston": "^3.1.0"
     },
     "devDependencies": {
-        "browser-sync": "^2.26.3",
+        "browser-sync": "^2.26.7",
         "cpx": "^1.5.0",
         "eslint": "^5.12.1",
         "nodemon": "^1.18.9",
