--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "editor.formatOnSave": true,
-    "eslint.autoFixOnSave": false,
     "eslint.alwaysShowStatus": true,
     "workbench.tree.indent": 15,
     "editor.minimap.enabled": false,
-    "markdown-pdf.displayHeaderFooter": false
+    "markdown-pdf.displayHeaderFooter": false,
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": false
+    }
 }
